--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
   </parent>
   <groupId>com.github.shijingsh</groupId>
   <artifactId>mg2-framework</artifactId>
-  <version>1.4.0</version>
+  <version>1.0.0</version>
   <modules>
-    <module>mg-entity</module>
-    <module>mg-common</module>
-    <module>mg-pay</module>
+    <module>xs-entity</module>
+    <module>xs-common</module>
+    <module>xs-pay</module>
   </modules>
   <packaging>pom</packaging>
   <name>mg2-framework</name>
