--- a/pom.xml
+++ b/pom.xml
@@ -252,14 +252,6 @@
 
 
 
-
-    <!--升级到2.3.3-->
-<!--    <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-jaxrs</artifactId>
-      <version>1.9.13</version>
-    </dependency>-->
-
     <!--jackson版本升级，包名也变了-->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -287,59 +279,18 @@
           <artifactId>commons-beanutils</artifactId>
           <version>1.9.0</version>
         </dependency>
-    <!--
-        <dependency>
-          <groupId>commons-digester</groupId>
-          <artifactId>commons-digester</artifactId>
-          <version>1.8</version>
-        </dependency>
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.6</version>
-    </dependency>-->
+
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.3</version>
     </dependency>
-<!--    <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-      <version>3.1</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-configuration</groupId>
-      <artifactId>commons-configuration</artifactId>
-      <version>1.6</version>
-    </dependency>-->
+
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
       <version>1.7.4</version>
     </dependency>
-    <!-- slf4j + logback 取代 slf4j + log4j logback效率远高于log4j-->
-<!--
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.26</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>${logback.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-access</artifactId>
-      <version>${logback.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback.version}</version>
-    </dependency>-->
 
     <dependency>
       <groupId>xerces</groupId>
@@ -477,14 +428,7 @@
       <artifactId>shiro-ehcache</artifactId>
       <version>${shiro.version}</version>
     </dependency>
-  <!--
-    <dependency>
-      <groupId>net.sf.jxls</groupId>
-      <artifactId>jxls-core</artifactId>
-      <version>1.0.6</version>
-    </dependency>
--->
-
+    <!--阿里云短信-->
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>aliyun-java-sdk-core</artifactId>
