--- a/xs-common/pom.xml
+++ b/xs-common/pom.xml
@@ -24,7 +24,7 @@
             <version>1.0.0</version>
         </dependency>
         <!-- Jedis -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.crazycake</groupId>
             <artifactId>shiro-redis</artifactId>
             <version>2.4.2.1-RELEASE</version>
@@ -43,7 +43,7 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
             <version>1.3.1.RELEASE</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
