--- a/xs-pay/pom.xml
+++ b/xs-pay/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>xs-pay</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>xs-common</name>
+    <name>xs-pay</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
