--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
         <querydsl.version>4.2.2</querydsl.version>
         <logback.version>1.2.3</logback.version>
         <spring.boot.version>2.3.1.RELEASE</spring.boot.version>
+        <commons-pool2.version>2.5.0</commons-pool2.version>
+        <druid.version>1.2.6</druid.version>
     </properties>
     <build>
         <finalName>xiushang-boot</finalName>
@@ -257,6 +259,25 @@
             <artifactId>spring-boot-starter-log4j</artifactId>
             <version>1.3.8.RELEASE</version>
         </dependency>-->
+
+        <!--Spring boot Redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+        <!--spring boot 集成redis所需common-pool2-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
 
         <!-- querydsl -->
         <dependency>
