--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,11 @@
     </parent>
     <groupId>com.github.shijingsh</groupId>
     <artifactId>xiushang-boot</artifactId>
-    <version>1.2.2</version>
+    <version>1.3.0</version>
     <modules>
         <module>xs-entity</module>
         <module>xs-common</module>
+        <module>xs-service</module>
         <module>xs-jwt-security</module>
         <module>xs-job</module>
     </modules>
