--- a/xs-common/pom.xml
+++ b/xs-common/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>xiushang-boot</artifactId>
         <groupId>com.github.shijingsh</groupId>
-        <version>1.2.2</version>
+        <version>1.3.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.shijingsh</groupId>
     <artifactId>xs-common</artifactId>
-    <version>1.2.2</version>
+    <version>1.3.0</version>
     <packaging>jar</packaging>
     <name>xs-common</name>
     <url>http://maven.apache.org</url>
@@ -20,13 +20,14 @@
     <dependencies>
         <dependency>
             <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-entity</artifactId>
-            <version>1.2.2</version>
+            <artifactId>xs-service</artifactId>
+            <version>1.3.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-jwt-security</artifactId>
-            <version>1.2.2</version>
+            <version>1.3.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- Jedis -->
