--- a/xs-service/pom.xml
+++ b/xs-service/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.shijingsh</groupId>
-    <artifactId>xs-job</artifactId>
+    <artifactId>xs-service</artifactId>
     <version>1.3.0</version>
     <packaging>jar</packaging>
     <properties>
@@ -23,30 +23,12 @@
     <dependencies>
         <dependency>
             <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-service</artifactId>
-            <version>1.3.0</version>
-            <scope>compile</scope>
+            <artifactId>xs-entity</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.quartz-scheduler</groupId>
-            <artifactId>quartz</artifactId>
-            <version>${quartz.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.mchange</groupId>
-                    <artifactId>c3p0</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.zaxxer</groupId>
-                    <artifactId>HikariCP-java6</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
     </dependencies>
 
     <build>
-        <finalName>xs-job</finalName>
+        <finalName>xs-service</finalName>
         <defaultGoal>compile</defaultGoal>
     </build>
 
