--- a/xs-ads/pom.xml
+++ b/xs-ads/pom.xml
@@ -31,6 +31,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.tencent.ads</groupId>
+            <artifactId>marketing-api-java-sdk</artifactId>
+            <version>1.1.28</version>
+        </dependency>
+
     </dependencies>
 
 </project>
