--- a/xs-marketing/pom.xml
+++ b/xs-marketing/pom.xml
@@ -7,10 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.shijingsh</groupId>
-    <artifactId>xs-ads</artifactId>
+    <artifactId>xs-marketing</artifactId>
     <version>1.3.0</version>
     <packaging>jar</packaging>
-    <name>xs-ads</name>
+    <name>xs-marketing</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
