--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <commons-pool2.version>2.5.0</commons-pool2.version>
         <druid.version>1.2.6</druid.version>
         <jjwt.version>0.9.1</jjwt.version>
+        <knife4j.version>2.0.8</knife4j.version>
         <hutool.version>5.3.8</hutool.version>
     </properties>
     <build>
@@ -397,7 +398,7 @@
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.8</version>
         </dependency>
         <!--引入lombok-->
         <dependency>
