--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>xiushang-boot</artifactId>
     <version>1.3.1</version>
     <modules>
+        <module>xiushang-boot-example</module>
         <module>xs-entity</module>
         <module>xs-common</module>
         <module>xs-service</module>
