auth2 自定义登陆

--- a/xiushang-boot-example/example-admin/src/main/resources/application.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application.yml
@@ -94,6 +94,7 @@ jwt:
       - /api/user/login
       - /api/user/logout
       - /api/user/captcha
+      - /authentication/**
       #- static
       - /**/*.js
       - /**/*.css
