auth2 自定义登陆

--- a/xiushang-boot-example/example-admin/src/main/resources/application.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application.yml
@@ -95,6 +95,8 @@ jwt:
       - /api/user/logout
       - /api/user/captcha
       - /authentication/**
+      - /oauth/authorize
+      - /oauth/token
       #- static
       - /**/*.js
       - /**/*.css
