--- a/xiushang-boot-example/example-admin/src/main/resources/application.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application.yml
@@ -100,6 +100,7 @@ jwt:
       - /api/user/logout
       - /api/user/captcha
       - /authentication/**
+      - /oauthLogin
       #- static
       - /**/*.js
       - /**/*.css
