--- a/xs-entity/pom.xml
+++ b/xs-entity/pom.xml
@@ -18,7 +18,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>xs-entity</finalName>
