--- a/xs-jwt-security/pom.xml
+++ b/xs-jwt-security/pom.xml
@@ -54,7 +54,12 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>5.1.2.RELEASE</version>
         </dependency>
-
+        <!-- BouncyCastleProvider 解密微信手机号码 -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>1.46</version>
+        </dependency>
 
     </dependencies>
     <build>
