--- a/xs-jwt-security/pom.xml
+++ b/xs-jwt-security/pom.xml
@@ -3,13 +3,13 @@
 <parent>
         <artifactId>xiushang-boot</artifactId>
         <groupId>com.github.shijingsh</groupId>
-        <version>1.3.1</version>
+        <version>1.4.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.shijingsh</groupId>
     <artifactId>xs-jwt-security</artifactId>
-    <version>1.3.1</version>
+    <version>1.4.1</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,11 +19,7 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-entity</artifactId>
-        </dependency>
-
+        <!-- xs基础服务-->
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-service</artifactId>
