--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>xs-jwt-security</module>
         <module>xs-job</module>
         <module>xs-marketing</module>
+        <module>xs-dubbo</module>
     </modules>
     <packaging>pom</packaging>
     <name>xiushang-boot</name>
@@ -71,6 +72,8 @@
         <knife4j.version>3.0.3</knife4j.version>
         <knife4j.annotations.version>1.5.22</knife4j.annotations.version>
         <hutool.version>5.7.17</hutool.version>
+        <dubbo.version>3.0.4</dubbo.version>
+        <zookeeper.version>3.0.4</zookeeper.version>
     </properties>
     <build>
         <finalName>xiushang-boot</finalName>
