--- a/xiushang-boot-example/example-admin/src/main/resources/application.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application.yml
@@ -95,6 +95,7 @@ jwt:
       #- /druid/**
       - /favicon.ico
       - /favicon.png
+      - /test/**
       - /captcha.jpg
       - /authentication/**
       - /oauthLogin
