--- a/xiushang-boot-example/pom.xml
+++ b/xiushang-boot-example/pom.xml
@@ -70,7 +70,12 @@
             <version>1.4.1</version>
             <type>jar</type>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.shijingsh</groupId>
+            <artifactId>xs-dubbo</artifactId>
+            <version>1.4.1</version>
+            <type>jar</type>
+        </dependency>
         <!-- shijingsh ai框架依赖 -->
         <!--<dependency>
             <groupId>com.github.shijingsh</groupId>
