--- a/xiushang-boot-example/pom.xml
+++ b/xiushang-boot-example/pom.xml
@@ -15,6 +15,9 @@
         <module>example-entity</module>
         <module>example-job</module>
         <module>example-service</module>
+
+        <module>example-dubbo-consumer</module>
+        <module>example-dubbo-provider</module>
     </modules>
     <groupId>com.xiushang</groupId>
     <artifactId>xiushang-boot-example</artifactId>
@@ -70,12 +73,7 @@
             <version>1.4.1</version>
             <type>jar</type>
         </dependency>
-        <dependency>
-            <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-dubbo</artifactId>
-            <version>1.4.1</version>
-            <type>jar</type>
-        </dependency>
+
         <!-- shijingsh ai框架依赖 -->
         <!--<dependency>
             <groupId>com.github.shijingsh</groupId>
