--- a/xiushang-boot-example/example-rocketmq/src/main/resources/application-uat.yml
+++ b/xiushang-boot-example/example-rocketmq/src/main/resources/application-uat.yml
@@ -46,6 +46,23 @@ spring:
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒
 
+# dubbo 相关配置
+dubbo:
+  application:
+    # 应用名称
+    name: order-provider
+  scan:
+    # 接口实现者（服务实现）包
+    base-packages: om.xiushang.admin.service
+  # 注册中心信息
+  registry:
+    address: zookeeper://192.168.29.12:2181
+  protocol:
+    # 协议名称
+    name: dubbo
+    # 协议端口
+    port: 20880
+
 file:
   #文件上传目录 绝对路径 末尾请加 /
   #path: D:/files/ #windows
