--- a/xiushang-boot-example/example-rocketmq/src/main/resources/application-dev.yml
+++ b/xiushang-boot-example/example-rocketmq/src/main/resources/application-dev.yml
@@ -34,7 +34,7 @@ spring:
         allow: 127.0.0.1,192.168.15.1/255,180.168.41.154
         reset-enable: true
   redis:
-    host: 10.50.50.27 # Redis服务器地址
+    host: 192.168.29.12 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
@@ -45,18 +45,35 @@ spring:
         max-idle: 8 # 连接池中的最大空闲连接
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒
-
 file:
   #文件上传目录 绝对路径 末尾请加 /
   #path: D:/files/ #windows
-  path: /data/amy-xiushang/file/ #linux
+  path: /Users/ZKUI/data/files/ #linux
   #文件预览、下载的url, 末尾请勿加 /
-  url: https://xiushang.365me.me/files
+  url: http://localhost:8080/files
 
-knife4j:
-  basic:
-    enable: true
-    username: amy-xiushang-knife
-    password: amy-xiushang-knife-pwd
+apache:
+  rocketmq:
+    consumer:
+      pushConsumer: XiaourPushConsumer
+    producer:
+      producerGroup: Xiaour
+    namesrvAddr: 121.37.171.85:9876
+# dubbo 相关配置
+dubbo:
+  application:
+    # 应用名称
+    name: order-provider
+  scan:
+  # 接口实现者（服务实现）包
+   base-packages: om.xiushang.admin.service
+  # 注册中心信息
+  registry:
+    address: zookeeper://192.168.29.12:2181
+  protocol:
+    # 协议名称
+    name: dubbo
+    # 协议端口
+    port: 20880
 
-temppath: /data/images
+temppath: D:/data/images
