--- a/xiushang-boot-example/pom.xml
+++ b/xiushang-boot-example/pom.xml
@@ -59,19 +59,19 @@
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xiushang-boot</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
             <type>pom</type>
         </dependency>
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-entity</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-common</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
             <type>jar</type>
         </dependency>
 
@@ -79,26 +79,26 @@
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-dubbo</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
             <type>jar</type>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.xiushang</groupId>
             <artifactId>xs-rocketmq</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
         <!-- shijingsh ai框架依赖 -->
         <!--<dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>shijingsh-ai-core</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
         </dependency>
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>shijingsh-ai-rns</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
         </dependency>-->
 
         <!-- solr -->
