--- a/xiushang-boot-example/example-rocketmq/pom.xml
+++ b/xiushang-boot-example/example-rocketmq/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -22,13 +22,18 @@
         <dependency>
             <groupId>com.xiushang</groupId>
             <artifactId>example-service</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!--<dependency>
             <groupId>com.xiushang</groupId>
             <artifactId>xs-rocketmq</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
         </dependency>-->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.4.0</version>
+        </dependency>
     </dependencies>
 
     <!--配置环境的profile-->
