--- a/xiushang-boot-example/example-rocketmq/pom.xml
+++ b/xiushang-boot-example/example-rocketmq/pom.xml
@@ -14,26 +14,13 @@
     <packaging>jar</packaging>
 
     <dependencies>
-<!--        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
         <dependency>
-            <groupId>com.xiushang</groupId>
-            <artifactId>example-service</artifactId>
-        </dependency>-->
-
-        <!--<dependency>
-            <groupId>com.xiushang</groupId>
+            <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-rocketmq</artifactId>
             <version>1.4.2</version>
-        </dependency>-->
-        <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-client</artifactId>
-            <version>4.4.0</version>
         </dependency>
+
     </dependencies>
 
     <!--配置环境的profile-->
