--- a/xiushang-boot-example/example-rocketmq/src/main/resources/application.yml
+++ b/xiushang-boot-example/example-rocketmq/src/main/resources/application.yml
@@ -99,6 +99,7 @@ jwt:
       - /captcha.jpg
       - /authentication/**
       - /oauthLogin
+      - /push
       #- static
       - /**/*.js
       - /**/*.css
