--- a/xiushang-boot-example/pom.xml
+++ b/xiushang-boot-example/pom.xml
@@ -75,13 +75,15 @@
             <type>jar</type>
         </dependency>
 
+<!--
 
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-dubbo</artifactId>
             <version>1.4.2</version>
             <type>jar</type>
-        </dependency>
+        </dependency>&ndash;&gt;
+-->
 
         <!--<dependency>
             <groupId>com.xiushang</groupId>
