--- a/xiushang-boot-example/example-dubbo-consumer/pom.xml
+++ b/xiushang-boot-example/example-dubbo-consumer/pom.xml
@@ -10,13 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>example-dubbo-consumer</artifactId>
     <name>${project.artifactId}</name>
-    <description>后台管理模块</description>
+    <description>dubbo 消费者</description>
     <packaging>jar</packaging>
 
     <dependencies>
+        <!--dubbo依赖-->
         <dependency>
-            <groupId>com.xiushang</groupId>
-            <artifactId>example-service</artifactId>
+            <groupId>com.github.shijingsh</groupId>
+            <artifactId>xs-dubbo</artifactId>
+            <version>1.4.2</version>
         </dependency>
     </dependencies>
 
