--- a/xiushang-boot-example/example-dubbo-provider/pom.xml
+++ b/xiushang-boot-example/example-dubbo-provider/pom.xml
@@ -10,21 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>example-dubbo-provider</artifactId>
     <name>${project.artifactId}</name>
-    <description>后台管理模块</description>
+    <description>dubbo 生产者</description>
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- spring boot 依赖 -->
+        <!--dubbo依赖-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>com.github.shijingsh</groupId>
+            <artifactId>xs-dubbo</artifactId>
+            <version>1.4.2</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.xiushang</groupId>
-            <artifactId>example-service</artifactId>
-        </dependency>
-
     </dependencies>
 
     <!--配置环境的profile-->
