--- a/xiushang-boot-example/pom.xml
+++ b/xiushang-boot-example/pom.xml
@@ -42,6 +42,11 @@
         <dependencies>
             <dependency>
                 <groupId>com.xiushang</groupId>
+                <artifactId>example-entity</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.xiushang</groupId>
                 <artifactId>example-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -74,47 +79,6 @@
             <version>1.4.2</version>
             <type>jar</type>
         </dependency>
-
-<!--
-
-        <dependency>
-            <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-dubbo</artifactId>
-            <version>1.4.2</version>
-            <type>jar</type>
-        </dependency>&ndash;&gt;
--->
-
-        <!--<dependency>
-            <groupId>com.xiushang</groupId>
-            <artifactId>xs-rocketmq</artifactId>
-            <version>1.4.2</version>
-            <type>jar</type>
-        </dependency>-->
-        <!-- shijingsh ai框架依赖 -->
-        <!--<dependency>
-            <groupId>com.github.shijingsh</groupId>
-            <artifactId>shijingsh-ai-core</artifactId>
-            <version>1.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.shijingsh</groupId>
-            <artifactId>shijingsh-ai-rns</artifactId>
-            <version>1.4.2</version>
-        </dependency>-->
-
-        <!-- solr -->
-        <!--<dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.12</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.solr</groupId>
-            <artifactId>solr-solrj</artifactId>
-            <version>8.5.1</version>
-        </dependency>-->
-
 
     </dependencies>
 
